--- a/src/meson.build
+++ b/src/meson.build
@@ -1,4 +1,4 @@
-fmm_sources = ['main.cpp', 'quadtree.cpp']
+fmm_sources = ['main.cpp', 'Quadtree.cpp']
 fmm = executable('fmm', 
     include_directories : inc,
     sources: fmm_sources,
