fixed make file I think

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,5 +1,10 @@
-fmm_sources = ['main.cpp', 'Quadtree.cpp']
+inc = include_directories('.')
+
+tree = library('node', sources: ['QTNode.hpp', 'Quadtree.h','Quadtree.cpp'])
+tree_dep = declare_dependency(include_directories: inc,
+  link_with: tree)
+
 fmm = executable('fmm', 
-    include_directories : inc,
-    sources: fmm_sources,
+    sources : ['main.cpp'],
+    dependencies: [tree_dep],
     install : true)
